[package]
name = "context-graph-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Context Graph Team"]
description = "MCP JSON-RPC server for Context Graph"
license = "MIT"
repository = "https://github.com/contextgraph/contextgraph"
keywords = ["mcp", "jsonrpc", "server", "context-graph"]

[lib]
name = "context_graph_mcp"
path = "src/lib.rs"

[[bin]]
name = "context-graph-mcp"
path = "src/main.rs"

[dependencies]
context-graph-core = { path = "../context-graph-core" }
context-graph-cuda = { path = "../context-graph-cuda" }
context-graph-embeddings = { path = "../context-graph-embeddings" }
context-graph-storage = { path = "../context-graph-storage" }
context-graph-causal-agent = { path = "../context-graph-causal-agent" }
context-graph-graph-agent = { path = "../context-graph-graph-agent" }
context-graph-ocr = { path = "../context-graph-ocr" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Configuration
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { workspace = true }

# Lazy initialization (TASK-014)
once_cell = "1.19"

# JSON Schema validation (TASK-36)
schemars = "0.8"

# Synchronization
parking_lot = "0.12"
futures = "0.3"

# SSE Transport (TASK-32)
axum = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"

# Time
chrono = { workspace = true }

# Hashing and encoding for content hashes
sha2 = "0.10"
hex = "0.4"

# Glob pattern matching for file watcher tools
glob = "0.3"

# PID file flock guard (Unix only, prevents multi-process DB corruption)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
# Enable test-utils for stubs access in tests (AP-007 compliant)
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }
# Enable test-utils for graph-agent stubs in tests
context-graph-graph-agent = { path = "../context-graph-graph-agent", features = ["test-utils"] }
# TASK-33: SSE integration tests
tower = { version = "0.5", features = ["util"] }

[features]
# GPU-first architecture: CUDA is REQUIRED (RTX 5090 / Blackwell)
# No fallback stubs - system fails fast if CUDA unavailable
default = ["candle"]
candle = ["context-graph-embeddings/candle"]
# LLM feature enables CausalDiscoveryLLM + GraphDiscoveryService (~500MB of llama-cpp-2)
# Without this: binary ~80MB, LLM-based tools unavailable (causal/graph discovery)
llm = ["context-graph-causal-agent/llm", "context-graph-graph-agent/llm"]
cuda = ["context-graph-cuda/cuda", "context-graph-embeddings/cuda", "context-graph-storage/cuda", "context-graph-causal-agent/cuda", "candle"]
metal = ["context-graph-embeddings/metal", "context-graph-storage/metal", "context-graph-causal-agent/metal", "candle"]
