[package]
name = "context-graph-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer for Context Graph with RocksDB backend"
license = "MIT"

[dependencies]
context-graph-core = { path = "../context-graph-core" }
rocksdb = "0.22"
bincode = "1.3"
rmp-serde = "1.1"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["sync"] }

[dev-dependencies]
tempfile = "3.10"
