[package]
name = "context-graph-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer for Context Graph with RocksDB backend"
license = "MIT"

[dependencies]
context-graph-core = { path = "../context-graph-core" }
# GPU required per constitution (stack.gpu, AP-007)
context-graph-embeddings = { path = "../context-graph-embeddings" }
# GPU batch similarity for multi-space search (ARCH-GPU-06)
context-graph-cuda = { path = "../context-graph-cuda", optional = true }
rocksdb = "0.22"
bincode = "1.3"
rmp-serde = "1.1"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["sync", "rt-multi-thread", "macros"] }
async-trait = "0.1"
tracing = "0.1"
rayon = "1.10"
# HIGH-17/MED-11 FIX: Non-poisonable RwLock to prevent cascading panics
parking_lot = "0.12"
dashmap = "5.5"
sha2 = "0.10"
# HNSW graph traversal - replaces brute force O(n) with O(log n)
# TASK-STORAGE-P1-001
usearch = "2"

# RVF client for RuVector Format integration
reqwest = { version = "0.12", features = ["json"] }

# Unix file locking for stale lock detection
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# GPU is REQUIRED for production. Constitution Reference: stack.gpu, AP-007
default = []
metal = ["context-graph-embeddings/metal"]
cuda = ["context-graph-embeddings/cuda", "dep:context-graph-cuda", "context-graph-cuda/cuda"]

[dev-dependencies]
tempfile = "3.10"
rand = { version = "0.8", features = ["std_rng"] }
futures = "0.3"
# Enable test-utils for stubs access in tests (AP-007 compliant)
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }
# Shared test utilities (C5: cross-crate deduplication)
context-graph-test-utils = { path = "../context-graph-test-utils" }
# TASK-STORAGE-P2-001: Benchmarking for MaxSim performance validation
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "maxsim_bench"
harness = false

[[bench]]
name = "causal_relationships_bench"
harness = false

[[bench]]
name = "hybrid_effectiveness_bench"
harness = false

[[bench]]
name = "e11_quality_bench"
harness = false

[[example]]
name = "basic_storage"
path = "examples/basic_storage.rs"

[[example]]
name = "marblestone_edges"
path = "examples/marblestone_edges.rs"
