[package]
name = "context-graph-utl"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "UTL (Unified Theory of Learning) computation engine for Context Graph"
license = "MIT OR Apache-2.0"

[dependencies]
# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["sync", "time"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Internal dependency - provides base types and traits
context-graph-core = { path = "../context-graph-core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.35", features = ["full", "test-util"] }
rand = "0.8"

[[bench]]
name = "utl_bench"
harness = false

[[bench]]
name = "surprise_bench"
harness = false

[[test]]
name = "integration_tests"
path = "tests/integration_tests/mod.rs"
